<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.akexorcist.filewritercompat.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        tools:background="#eeeeee"
        tools:layout_height="120dp" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/internal_app_specific_label"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonInternalAppSpecificFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_in_file"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/buttonInternalAppSpecificCache"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/save_in_cache"
            android:textAllCaps="false" />
    </LinearLayout>

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/external_app_specific_label"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonExternalAppSpecificFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_in_file"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/buttonExternalAppSpecificCache"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/save_in_cache"
            android:textAllCaps="false" />
    </LinearLayout>

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/external_shareable_label"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonExternalShareableFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/save_in_file"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
</LinearLayout>
